# ModernCppChatServer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/: ClientManager.h  Server.h  Socket.h  TextUtils.h
src/: ClientManager.cpp  Server.cpp  Socket.cpp  TextUtils.cpp  main.cpp
tests/: TextUtilsTests.cpp  integration_test.py
